# libferrisstreams

./: .gitignore  ChangeLog  Makefile.am  Portfile  README  configure.ac  configure.in  ferrisstreams-config.in  ferrisstreams.pc.in  ferrisstreams.spec.in  myconfigure.sh  runtest.sh  tconfigure.sh
FerrisStreams/: All.hh  Exceptions.cpp  Exceptions.hh  FerrisPosix.cpp  FerrisPosix.hh  HiddenSymbolSupport.hh  Makefile.am  Shell.cpp  Shell.hh  Streams.cpp  Streams.hh
debian/: changelog  control  rules
macros/: ferrismacros.m4
testsuite/: Makefile.am  ut_close_signal.cpp  ut_fd_streams.cpp  ut_limiting_istream.cpp  ut_nullstream.cpp  ut_proxy_streams.cpp  ut_radix_dump.cpp  ut_stringstream.cpp  ut_tee_stream.cpp
testsuite/config/: Makefile.am
testsuite/ferrisstreams.test/: ferrisstreams.exp
testsuite/sampledata/: Makefile.am  alice13a.txt
