AC_INIT(ferrisstreams, 0.7.0)

PACKAGE=$PACKAGE_NAME
VERSION=$PACKAGE_VERSION
FERRISSTREAMS_VERSION=$VERSION
FERRISSTREAMS_FULLV=$VERSION

FERRISSTREAMS_MAJOR=`echo $VERSION | sed 's/^\([[0-9]]\)*\..*/\1/g'`
FERRISSTREAMS_MINOR=$(echo $VERSION | sed 's/^[[0-9]]*\.\([[0-9]]\)*\..*/\1/g')
FERRISSTREAMS_BETA=$(echo $VERSION | sed 's/^[[0-9]]*\.[[0-9]]*\.\([[0-9]]*\).*/\1/g')

AC_SUBST(FERRISSTREAMS_MAJOR)
AC_SUBST(FERRISSTREAMS_MINOR)
AC_SUBST(FERRISSTREAMS_BETA)

AC_SUBST(FERRISSTREAMS_FULLV)
AC_SUBST(FERRISSTREAMS_VERSION)
LT_RELEASE=$FERRISSTREAMS_MAJOR.$FERRISSTREAMS_MINOR
AC_SUBST(LT_RELEASE)

VERSION_INFO="-release $FERRISSTREAMS_MAJOR$FERRISSTREAMS_MINOR:0:0"
AC_SUBST(VERSION_INFO)

cd ${srcdir}; absolute_srcdir=`pwd`; cd -;

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE([1.9 tar-ustar])
AM_MAINTAINER_MODE

AC_CANONICAL_HOST
AC_ISC_POSIX

define([AC_LIBTOOL_LANG_F77_CONFIG], [:])dnl
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX

AC_DISABLE_STATIC

AC_STDC_HEADERS
AM_PROG_LIBTOOL

STLPORT_CFLAGS=""
STLPORT_LDFLAGS=""

FERRISSTREAMS_CF=" -O3 -DNDEBUG -I/nothing -DG_DISABLE_ASSERT -ffast-math -Wno-attributes "
FERRISSTREAMS_LD=""
AC_ARG_ENABLE(debug,
[--enable-debug            compile with -g and -O0 debug information],
[
  if test x$enableval = xyes; then
	echo setting debug mode to on...;
	FERRISSTREAMS_CF=" -O0 -g -pipe "; #-Wall "; 
  else
	echo setting debug mode to off...
  fi
])

AC_ARG_ENABLE(hiddensymbols,
[--enable-hiddensymbols            use hidden symbols for private APIs],
[
  if test x$enableval = xyes; then
	echo setting hidden symbol support...;
	FERRISSTREAMS_CF=" $FERRISSTREAMS_CF -DGCC_HASCLASSVISIBILITY -fvisibility=default -fvisibility-inlines-hidden ";
#	FERRISSTREAMS_CF=" $FERRISSTREAMS_CF -DGCC_HASCLASSVISIBILITY -fvisibility=hidden  -fvisibility-inlines-hidden ";
	AC_DEFINE(GCC_HASCLASSVISIBILITY)
  fi
])

###############################################################################
###############################################################################
###############################################################################
# Test for BOOST library
###############################################################################

TESTING_FEATURE="Boost C++ library";
AM_FERRIS_BOOST( 1.33.1, 
	[ echo "Found boost library ..."; ],
	[ AC_MSG_ERROR([ERROR: boost 1.33.1 (or 1.34.1 or maybe later) is required for building libferris]); exit; ] )

AC_ARG_ENABLE(boostipc,
  [AS_HELP_STRING([--enable-boostipc], [assume boost has IPC support and build code that uses it (default=no)])],
[],[])

have_boostipc=yes
AM_CONDITIONAL(HAVE_BOOST_IPC, test x"$have_boostipc" = xyes)

###############################################################################
###############################################################################
###############################################################################

AM_FERRIS_SIGC3( 3.0.0 )
AM_FERRIS_LOKI( 2.3.0 )

###############################################################################

AM_PATH_GLIB_2_0( 2.0.6, [], [], [gmodule gobject] )

CFLAGS=" $CFLAGS $FERRISSTREAMS_CF "
CXXFLAGS=" $CXXFLAGS $FERRISSTREAMS_CF "
LDFLAGS=" $LDFLAGS $FERRISSTREAMS_LD "
AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(CXXFLAGS)
AC_SUBST(CXXCPPFLAGS)

################################################################################
################################################################################
################################################################################

REQUIREMENTS=
AC_SUBST(REQUIREMENTS)

LIBFERRISSTREAMS_LA=" \$(top_builddir)/FerrisStreams/libferrisstreams.la "
AC_SUBST(LIBFERRISSTREAMS_LA)

#
# All done.
#
AC_OUTPUT([
Makefile
FerrisStreams/Makefile
ferrisstreams-config
ferrisstreams.spec
ferrisstreams.pc
testsuite/Makefile
testsuite/ferrisstreams.test/Makefile
testsuite/config/Makefile
testsuite/sampledata/Makefile
],
[
chmod +x ferrisstreams-config
])

